# smellslikenapalm

./: .gitignore  .promptignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PARALLEL.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  TODO.md  build.bat  build.sh  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codacy.yml
config/: admin_commands.ini  admin_list.txt  auth_tokens.txt  ban_list.txt  eac_scanner.json  game_modes.ini  gameplay_settings.ini  ip_blacklist.txt  maps.ini  motd.txt  server.ini  server_production.ini  teams.ini  weapons.ini  workshop_items.txt
data/: packagemap_chunks.json
data/maps/: README.md  global_objectives.txt  global_spawns.txt
data/mods/: README.md
deploy/: prometheus.yml
deploy/kubernetes/: configmap.yml  deployment.yml  namespace.yml  service.yml
docs/: ADMIN_COMMANDS.md  ANTI_BLOAT.md  API.md  API_Reference.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONFIGURATION.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  Development_Guide.md  FAQ.md  GAME_MODES.md  Home.md  MAPS.md  NETCODE.md  RS2V_ActorReplication_7258.md  RS2V_ControlChannel_WireSpec_7258.md  RS2V_PostJoin_Replication_7258.md  SCRIPTING.md  SCRIPTING_ASSESSMENT.md  SECURITY.md  Server_Setup.md  TELEMETRY.md  TROUBLESHOOTING.md  UE3_ActorChannel.md  UE3_ClassNetCache_HandleOrder.md  UE3_NetGUID_PackageMap.md  UE3_PropertyReplication.md  UE3_SpawnControlFlow.md  _Sidebar.md  _Template.md  sync-wiki.sh
docs/hardening/: FUZZ_TESTS.md  HARDENING_LOG.md  STATIC_ANALYSIS.md  SUMMARY.md
docs/re/: CLIENT_CRASH_team_select.md  MASTER_replication_reference.md  PROTOCOL_DECODER.md  SAFE_STATE_REP_PLAN.md  _ch2_raw.txt  gri_ch54_properties.md  hang_rootcause_teaminfo.md  netfields_all_classes.md  open_bunch_structure.md  pawn_spawn_replication.md  pc_ch2_postjoin_timeline.md  postjoin_packet_timeline.md  pri_channels_properties.md  teaminfo_channels_properties.md  ue3_property_value_codec.md
include/Physics/: Vector3.h
src/: main.cpp
src/Config/: ConfigManager.cpp  ConfigManager.h  ConfigValidator.cpp  ConfigValidator.h  DebugConfig.cpp  DebugConfig.h  GameConfig.cpp  GameConfig.h  INIParser.cpp  INIParser.h  INIParserTypes.h  MapConfig.cpp  MapConfig.h  NetworkConfig.cpp  NetworkConfig.h  PerformanceConfig.cpp  PerformanceConfig.h  SecurityConfig.cpp  SecurityConfig.h  ServerConfig.cpp  ServerConfig.h
src/Game/: AdminManager.cpp  AdminManager.h  BanRecord.h  Bounds.h  ChatManager.cpp  ChatManager.h  CommandHandlers.cpp  CommandManager.cpp  CommandManager.h  CommanderAbilities.cpp  CommanderAbilities.h  ConnectionLoginBridge.cpp  ConnectionLoginBridge.h  DamageSystem.cpp  DamageSystem.h  DynamicObject.h  EntityManager.h  GameMode.cpp  GameMode.h  GameServer.cpp  GameServer.h  GameSession.cpp  GameSession.h  GameState.cpp  GameState.h  GameWorld.cpp  GameWorld.h  HelicopterPhysics.cpp  HelicopterPhysics.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapVoteManager.cpp  MapVoteManager.h  ModManager.cpp  ModManager.h  MutatorManager.cpp  MutatorManager.h  Objective.cpp  (+40 more)
src/Input/: InputValidator.h  MovementValidator.h
src/Math/: Vector3.h
src/Network/: ActorReplication.cpp  ActorReplication.h  BandwidthManager.cpp  BandwidthManager.h  BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  ClientAddress.h  ClientConnection.cpp  ClientConnection.h  ConnectionManager.cpp  ConnectionManager.h  ConsoleInput.cpp  ConsoleInput.h  ControlChannel.cpp  ControlChannel.h  ControlReassembler.cpp  ControlReassembler.h  HandshakeState.cpp  HandshakeState.h  LatencyManager.h  NetMessages.h  NetworkInterface.cpp  NetworkInterface.h  NetworkManager.cpp  NetworkManager.h  NetworkMetrics.cpp  NetworkMetrics.h  NetworkPacket.cpp  NetworkPacket.h  NetworkThread.cpp  NetworkThread.h  NetworkUtils.cpp  NetworkUtils.h  Packet.h  PacketAssembler.cpp  PacketAssembler.h  PacketCodec.cpp  PacketCodec.h  (+23 more)
src/Physics/: AntiCheatManager.cpp  AntiCheatManager.h  CollisionDetection.cpp  CollisionDetection.h  InputValidator.cpp  InputValidator.h  MathUtils.h  MovementValidator.cpp  MovementValidator.h  PhysicsEngine.cpp  PhysicsEngine.h  Vector3.cpp
src/Protocol/: ActorReplication.cpp  ActorReplication.h  CompressionHandler.cpp  CompressionHandler.h  MessageDecoder.cpp  MessageDecoder.h  MessageEncoder.cpp  MessageEncoder.h  PacketTypes.cpp  (+15 more)
telemetry/: AlertMetricsReporter.cpp  CSVMetricsReporter.cpp  CustomMetrics.h  FileMetricsReporter.cpp  MemoryMetricsReporter.cpp  MetricsReporter.h  PrometheusReporter.cpp  TelemetryManager.cpp  TelemetryManager.h
tests/: ActorReplicationTests.cpp  AuthenticationTests.cpp  BandwidthTests.cpp  BitReaderFuzzTests.cpp  BoundsTests.cpp  CMakeLists.txt  ClientSimulatorTests.cpp  CollisionTests.cpp  CommandManagerTests.cpp  CompressionHandlerTests.cpp  CompressionTests.cpp  ConfigTests.cpp  ConfigValidationTests.cpp  ControlChannelTests.cpp  ControlReassemblerFuzzTests.cpp  ControlReassemblerTests.cpp  CrashHandlerTests.cpp  CryptoUtilsTests.cpp  EACTests.cpp  GameTests.cpp  HandlerGenerationTests.cpp  HandshakeIntegrationTests.cpp  HandshakeStateFuzzTests.cpp  INIParserTests.cpp  InputValidationTests.cpp  IntegrationTests.cpp  LoadTests.cpp  MapTests.cpp  MathUtilsTests.cpp  MemoryPoolTests.cpp  MovementValidationTests.cpp  NetworkPacketSafetyTests.cpp  NetworkTests.cpp  NetworkUtilsTests.cpp  ObjectiveTests.cpp  PacketAnalysisTests.cpp  PacketAssemblerTests.cpp  PacketCodecFuzzTests.cpp  PacketFlowTests.cpp  PacketFramingTests.cpp  (+26 more)
tools/: capture_realserver.ps1  ensure_server.ps1  gen_actor_bootstrap.py  gen_fullopens_bootstrap.py  gen_menu_bootstrap.py  gen_packagemap_full.py  gen_realsession_bootstrap.py  gen_replication_bootstrap.py  mock_client.py  netfield_types.ps1  netfield_types_ROGameReplicationInfo.txt  netfields_all.ps1  netfields_from_u.ps1  netfields_u_ROPlayerReplicationInfo.txt  netfields_u_ROWeapon.txt  netfields_u_global.txt  netfields_uc_global.txt  nettypes_from_u.ps1  pktlog_decode.py  server_watchdog.sh  soap_command.py  uc_netfields.py
(+123 files in other folders)
